--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "dependencies": {
     "MD5": "^1.2.2",
     "cookie-parser": "^1.3.5",
-    "express": "^4.12.4",
-    "mongoose": "^4.0.3",
+    "express": "^4.13.1",
+    "mongoose": "^4.0.6",
     "querystring": "^0.2.0",
-    "request": "^2.55.0"
+    "request": "^2.58.0",
+    "body-parser": "~1.13.2"
   }
 }
